# sts-client

./: LICENSE  README.md  codecov.yml  pyproject.toml  test_STSpy.py
.github/workflows/: offline-tests.yml  python-tests.yml
src/sts/client/: __init__.py  radio.py
src/subaru/sts/client/: __init__.py  datum.py  radio.py
tests/: test_datum.py  test_radio.py
